--- a/index.html
+++ b/index.html
@@ -10,5 +10,19 @@
   </head>
   <body>
     <div class="mask"></div>
+    <form class="form">
+      <label for="shapes">Pick a Shape:</label>
+      <br />
+      <select id="shapes" name="shapes">
+        <option value="circle">Circle</option>
+        <option value="square">Square</option>
+        <option value="triangle">Triangle</option>
+        <option value="diamond">Diamond</option>
+        <option value="pentagon">Pentagon</option>
+        <option value="hexagon">Hexagon</option>
+        <option value="octagon">Octagon</option>
+        <option value="star">Star</option>
+      </select>
+    </form>
   </body>
 </html>
