--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <form class="form">
       <label for="shapes">Pick a Shape:</label>
       <br />
-      <select id="shapes" name="shapes">
+      <select id="shapes" onchange="addMask()" name="shapes">
         <option value="circle">Circle</option>
         <option value="square">Square</option>
         <option value="triangle">Triangle</option>
