added an input to change the primary BG variable to any hex color

--- a/index.html
+++ b/index.html
@@ -23,6 +23,16 @@
         <option value="octagon">Octagon</option>
         <option value="star">Star</option>
       </select>
+      <br />
+      <label for="color">Pick a Hex Color</label>
+      <input
+        id="color"
+        type="text"
+        onchange="colorPicker()"
+        name="color"
+        placeholder="enter code without #"
+        maxlength="6"
+      />
     </form>
   </body>
 </html>
