--- a/index.html
+++ b/index.html
@@ -14,8 +14,9 @@
     <div class="mask"></div>
     <div>
       <form class="form">
-        <label class="label-text" for="shapes">Pick a Shape:</label>
         <br />
+        <div class="dropdown-container">
+        <label class="label-text" for="shapes">Pick a Shape:</label>
         <select class="input" id="shapes" onchange="addMask()" name="shapes">
           <option value="circle">Circle</option>
           <option value="square">Square</option>
@@ -26,6 +27,7 @@
           <option value="octagon">Octagon</option>
           <option value="star">Star</option>
         </select>
+      </div>
         <br />
         <div class="slider-container">
           <form>
