updated container padding and responsive layout, changed color slider label to BG Color

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <div class="slider-container">
           <form>
             <fieldset>
-              <legend>RGB to Hex</legend>
+              <legend>BG Color</legend>
               <label for="r">R</label>
               <input
                 type="range"
