--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <body>
     <div class="mask"></div>
     <div>
-      <form class="form">
+      <form class="form" id="form">
         <br />
         <div class="dropdown-container">
         <label class="label-text" for="shapes">Pick a Shape:</label>
