created func to add bg image url, created bg img container + styling

--- a/index.html
+++ b/index.html
@@ -40,6 +40,17 @@
         maxlength="6"
       />
     </div>
+      <div class="bg-img-container">
+      <label class="label-text" for="url">BG Image:</label>
+      <input
+        class="input"
+        id="url"
+        type="text"
+        onchange="backgroundImagePicker()"
+        name="url"
+        placeholder="enter image url"
+      />
+    </div>
         <div class="slider-container">
           <form>
             <fieldset>
