fixed responsive layout for mobile and tablet

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
       />
     </div>
       <div class="bg-img-container">
-      <label class="label-text" for="url">BG Image:</label>
+      <label class="label-text" for="url">Mask Image:</label>
       <input
         class="input"
         id="url"
