updated shape color placeholder text

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         type="text"
         onchange="colorPicker()"
         name="color"
-        placeholder="enter code without #"
+        placeholder="hex code without #"
         maxlength="6"
       />
     </div>
