added github repo link

--- a/index.html
+++ b/index.html
@@ -11,6 +11,11 @@
     <script defer src="./colors.js"></script>
   </head>
   <body>
+    <div class="logos">
+      <div class="github">
+          <a href="https://github.com/JawaraGordon/css-masks" target="_blank" rel="noopener"><img src="./img/github-logo.png"></a>
+      </div>
+  </div>
     <div class="mask"></div>
     <div>
       <form class="form" id="form">
